--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <section id="portfolio">
             <h1 class="headings">PORTFOLIO</h1>
             <div class="gallery">
-                <img src="./assets/images/pic1.jpg" alt="">
+                <a href="https://kayhancock.github.io/Wanderlist/"><img src="./sceenshots/wanderlist project 1.png" alt=""></a>
                 <img src="./assets/images/pic2.jpg" alt="">
                 <img src="./assets/images/pic3.jpg" alt="">
                 <img src="./assets/images/pic4.jpg" alt="">
