--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
             <h1 class="headings">PORTFOLIO</h1>
             <div class="gallery">
                 <a href="https://kayhancock.github.io/Wanderlist/"><img src="./screenshots/wanderlist project 1.png" alt=""></a>
-                <a href="" alt="https://github.com/mmelan000/Blue-Barramundi.git"><img src="./screenshots/find_a_friend.png" alt=""></a>
-                <img src="./assets/images/pic3.jpg" alt="">
+                <a href="https://github.com/mmelan000/Blue-Barramundi.git"><img src="./screenshots/find_a_friend.png" alt=""></a>
+                <a href="https://ehr-mypulse.herokuapp.com/"><img src="./assets/images/final_project3.png" alt="">
                 <img src="./assets/images/pic4.jpg" alt="">
                 <img src="./assets/images/pic5.jpg" alt="">
                 <img src="./assets/images/pic6.jpg" alt="">
