--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="gallery">
                 <a href="https://kayhancock.github.io/Wanderlist/"><img src="./screenshots/wanderlist project 1.png" alt=""></a>
                 <a href="https://github.com/mmelan000/Blue-Barramundi.git"><img src="./screenshots/find_a_friend.png" alt=""></a>
-                <a href="https://ehr-mypulse.herokuapp.com/"><img src="./assets/images/final_project3.png" alt="">
+                <a href="https://ehr-mypulse.herokuapp.com/"><img src="./assets/images/ehr-mypulse.herokuapp.com_.png" alt="">
                 <img src="./assets/images/pic4.jpg" alt="">
                 <img src="./assets/images/pic5.jpg" alt="">
                 <img src="./assets/images/pic6.jpg" alt="">
